--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+   "devDependencies": {
+     "eslint-plugin-react-hooks": "^4.1.2",
+     "typescript": "3.8.3"
+   },
   "browserslist": {
     "production": [
       ">0.2%",
