Added rendered elements in launches.js and main.js , Added CSS for application styling

--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "spacex",
   "version": "0.1.0",
   "private": true,
+  "main": "src/index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
@@ -19,10 +21,10 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-   "devDependencies": {
-     "eslint-plugin-react-hooks": "^4.1.2",
-     "typescript": "3.8.3"
-   },
+  "devDependencies": {
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "typescript": "3.8.3"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
