--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "spacex",
   "version": "0.1.0",
+  "engines": {
+    "node": "12.14.1"
+  },
   "private": true,
   "main": "src/index.js",
   "dependencies": {
